--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13"
+    "multer": "^1.4.3",
+    "nodemon": "^2.0.13",
+    "shortid": "^2.2.16",
+    "slugify": "^1.6.1"
   }
 }
